--- a/default.conf
+++ b/default.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	ServerAdmin claytoncamargo@chiptronic.com.br
+	ServerAdmin youremail@yourdomain.com.br
 	ServerName server.com.br
 	ServerAlias www.server.com.br
 	DocumentRoot /var/www/html
